# GNC

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  asset-manifest.json  build_wasm.sh  index.html
.github/workflows/: CI.yml  Frontend-CD.yml  build.yml  gnalc.yml
doc/: Report.md
gnc-frontend/: config-overrides.js  package.json  tailwind.config.js  test.js
gnc-frontend/public/: index.html
gnc-frontend/src/: App.js  index.js
src/: checker.rs  codegen.rs  gnalc.pest  gnc.pest  main.rs  parser.rs  types.rs  visualization.rs
static/css/: 3.cd22e05c.chunk.css  main.cd22e05c.chunk.css
static/js/: 2.681f7af8.chunk.js  2.6ac1df62.chunk.js  2.821a8cc0.chunk.js  2.a20e2f90.chunk.js  2.cf476bcc.chunk.js  2.eee39e00.chunk.js  2.eee39e00.chunk.js.LICENSE.txt  2.eeee1c9b.chunk.js  2.f7ad176a.chunk.js  3.2c65d2a5.chunk.js  3.2c65d2a5.chunk.js.map  3.3d07ba52.chunk.js  3.3d07ba52.chunk.js.map  3.5233ef83.chunk.js  3.5233ef83.chunk.js.map  3.63cb7832.chunk.js  3.63cb7832.chunk.js.map  3.94aa9142.chunk.js  3.94aa9142.chunk.js.map  3.c88ae492.chunk.js  3.c88ae492.chunk.js.map  3.e6a7f419.chunk.js  3.e6a7f419.chunk.js.map  4.251d63b3.chunk.js  4.251d63b3.chunk.js.map  4.48e492c1.chunk.js  4.48e492c1.chunk.js.map  4.7b65e0c1.chunk.js  4.7b65e0c1.chunk.js.map  main.1c88ea81.chunk.js  main.1c88ea81.chunk.js.map  main.227742b0.chunk.js  main.227742b0.chunk.js.map  main.7de4869b.chunk.js  main.7de4869b.chunk.js.map  runtime-main.1fe70496.js  runtime-main.1fe70496.js.map  (+14 more)
test/: .gitignore  basic.bc  basic.c  basic.ll  batch-test.mjs  minidecaf-test.mjs
tmp/: codegen.rs
(+33 files in other folders)
